# pulse

./: .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  LICENSE  QUICK_REFERENCE.md  README.md  ROADMAP.md  SPEC.md  TESTING_GUIDE.md  components_all.txt  instructions.md  issue.md  league.postman_collection.json  package-lock.json  package.json  panels_list.txt  prompt.md  pulse-test-collection.json  sample-collection.yaml  sample-environments.yaml  sample-teams.yaml  test-apis.js
src/: App.tsx  index.css  main.tsx
src-tauri/: 734d3c43-5431-4a66-b750-aad1513b15fb  Cargo.toml  personal  tauri.conf.json  team_c62b7aec-9be3-43bb-9671-e058f316d5db
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  oauth.rs  script_runner.rs
src-tauri/src/collections/: email.rs  export.rs  git.rs  loader.rs  mod.rs  postman.rs  team.rs  team_loader.rs  types.rs  workspace.rs
src-tauri/src/http/: client.rs  error.rs  types.rs
src/components/: ActivityFeed.tsx  TeamPanel.tsx
src/components/collections/: CollectionTree.tsx
src/components/environments/: EnvironmentVariableEditor.tsx
src/components/flow/: CustomEdge.tsx  ExecutionLogsPanel.tsx  FlowBuilder.tsx  FlowSidebar.tsx  NodeConfigPanel.tsx
src/hooks/: useKeyboardShortcuts.ts  useResizable.ts  useTauri.ts
src/lib/: logger.ts
src/services/: autoSaveService.ts  codeGen.ts  curl.ts  graphql.ts  importService.ts  scriptRunner.ts  variableResolver.ts  websocket.ts
src/stores/: useAppStore.ts  useCollectionStore.ts  useEnvStore.ts  useFlowStore.ts  useHistoryStore.ts  useMonitorStore.ts  useSettingsStore.ts  useTabStore.ts  useTeamStore.ts  useWorkspaceStore.ts
src/styles/: reset.css  tokens.css  typography.css
src/types/: index.ts
src/utils/: flowRunner.ts
(+62 files in other folders)
