[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dirs = "5"
tiny_http = "0.12.0"
url = "2.5.8"
base64 = "0.22.1"
sha2 = "0.10.9"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
open = "5.3.3"
dotenv = "0.15"
boa_engine = "0.21"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
